# AstrOs.Screen

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.squareline/: AstrOsScreen.sll  AstrOsScreen.spj  AstrOsScreen_events.py
.squareline/assets/: ui_font_StarJedi_28.fcfg  ui_font_StarJedi_72.fcfg
.squareline/components/: MainModal.ecomp
components/WZ8048C050/: CMakeLists.txt  WZ8048C050.c
components/WZ8048C050/include/: WZ8048C050.h
components/WZ8048C070/: CMakeLists.txt  WZ8048C070.c
components/WZ8048C070/include/: WZ8048C070.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lvgl_macros.h  main.cpp
main/httpclient/: astros_http_client.cpp  astros_http_client.hpp
main/messaging/: astros_messaging.hpp
main/scripts/: astros_script.cpp  astros_script.hpp
main/storage/: nvs_manager.c  nvs_manager.h  storage_manager.hpp  strorage_manager.cpp
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_mainmodal.c  ui_comp_mainmodal.h
main/ui/fonts/: ui_font_StarJedi_28.c  ui_font_StarJedi_72.c
main/ui/images/: ui_img_button_png.c  ui_img_gear_png.c
main/ui/screens/: ui_Screen1.c  ui_loadingscreen.c  ui_mainscreen.c  ui_settingsscreen.c
main/utility/: astros_string_util.hpp  astros_util.c  astros_util.h
main/wifi_controller/: wifi_controller.cpp  wifi_controller.hpp
